[package]
name = "factorio-lua-src"
version = "546.0.0"
authors = ["Aleksandr Orlenko <zxteam@protonmail.com>", "JohnTheCoolingFan <ivan8215145640@gmail.com>"]
edition = "2021"
repository = "https://github.com/JohnTheCoolingFan/factorio-lua-src-rs"
keywords = ["lua", "lua52", "lua53", "lua54", "factorio"]
readme = "README.md"
license = "MIT"
description = """
Sources of Lua 5.1/5.2/5.3/5.4 and logic to build them. Fork with Factorio lua.
"""

[features]
ucid = [] # accept UniCode IDentifiers

[workspace]
members = ["testcrate"]

[dependencies]
cc = "1.0.54"
